--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!doctype html>
 <html>
   <head>
+  		<meta name="viewport" content="width=device-width, initial-scale=1">
+  		<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+       
+       <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
        <script src="Rescources\display.js"></script>
-
-
-     <title>Quiz1</title>
+   
+     <title>Lab 7</title>
   </head>
-  <body id="displaydata">
+  <body>
+  	<div id="displaydata" class ="accordion">
+  	</div>
   </body>
+  
+
 </html>
 
 
