--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   		<meta name="viewport" content="width=device-width, initial-scale=1">
   		<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
        
        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
        <script src="Rescources\display.js"></script>
@@ -11,6 +13,10 @@
      <title>Lab 7</title>
   </head>
   <body>
+    <div class="jumbotron text-center">
+    <h1>Web Systems: Labs and Homeworks</h1>
+  <p>Created by Corey Burns</p>
+    </div>
   	<div id="displaydata" class ="accordion">
   	</div>
   </body>
