--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
        
        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
        <script src="Rescources\display.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
    
      <title>Lab 7</title>
   </head>
@@ -16,6 +17,9 @@
     <div class="jumbotron text-center">
     <h1>Web Systems: Labs and Homeworks</h1>
   <p>Created by Corey Burns</p>
+      <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+      70% of class completed
+    </div>
     </div>
   	<div id="displaydata" class ="accordion">
   	</div>
