--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
      <title>Lab 7</title>
   </head>
   <body>
+    <!-- class jumbotron makes the header -->
     <div class="jumbotron text-center">
     <h1>Web Systems: Labs and Homeworks</h1>
   <p>Created by Corey Burns</p>
+  <!-- creates the progress bar using bootstrap -->
       <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
       70% of class completed
     </div>
     </div>
+    <!-- below is the div in which data is filled and the accordion is implumented -->
   	<div id="displaydata" class ="accordion">
   	</div>
   </body>
